--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             margin: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -22,6 +23,7 @@
             border: 2px solid transparent;
             transition: all 0.3s ease;
             text-align: center;
+            margin-top: 20px;
         }
         .hover-button:hover {
             border-color: #0066cc;
@@ -29,9 +31,14 @@
             color: #0066cc;
             cursor: pointer;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
+    <img src="your-image-url.jpg" alt="Description of the image">
     <div class="hover-button">Hello people of the world</div>
 </body>
 </html>
