--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body>
-    <img src="your-image-url.jpg" alt="Description of the image">
+    <img src="poyu.jpg" alt="Description of the image">
     <div class="hover-button">Hello people of the world</div>
 </body>
 </html>
