--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
         }
     </style>
 </head>
-<body>
-    <img src="pigs/backgr.webp" alt="Description of the image">
-    <div class="hover-button">Hello people of the world</div>
-</body>
+<style>
+body {
+  background-image: src="pigs/backgr.webp";
+}
+</style>
+//<body>
+//    <img src="pigs/backgr.webp" alt="Description of the image">
+//    <div class="hover-button">Hello people of the world</div>
+//</body>
 </html>
