--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: white;
+            background-image: src="backgr.webp";
             font-family: Arial, sans-serif;
         }
         .hover-button {
@@ -37,13 +37,8 @@
         }
     </style>
 </head>
-<style>
-body {
-  background-image: src="pigs/backgr.webp";
-}
-</style>
-//<body>
-//    <img src="pigs/backgr.webp" alt="Description of the image">
-//    <div class="hover-button">Hello people of the world</div>
-//</body>
+<body>
+    <img src="poyu.jpg" alt="Description of the image">
+    <div class="hover-button">Hello people of the world</div>
+</body>
 </html>
