--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url("pigs/backgr.webp");;
+            background-image: url("pigs/backgr.webp");
             font-family: Arial, sans-serif;
         }
         .hover-button {
