--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             margin: 0;
             font-family: Arial, sans-serif;
             background-image: url("backgr.webp"); /* Corrected syntax */
-            background-repeat: no-repeat; /* Ensures no repeated background */
-            background-size: auto; /* Allows the image to scroll vertically */
-            background-position: top; /* Keeps the image aligned to the top */
+            background-repeat: no-repeat; /* Prevents repeated background */
+            background-size: cover; /* Ensures the image covers the width */
+            background-position: top; /* Aligns the image at the top */
             height: 200vh; /* Makes the body twice the height of the viewport */
         }
         .hover-button {
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <img src="poyu.jpg" alt="Description of the image">
-    <div class="hover-button">Hello people of the world</div>
+  /* <img src="poyu.jpg" alt="Description of the image"> */
+    <div class="hover-button"> Hello people of the world</div>
 </body>
 </html>
