--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-image: url("backgr.webp"); /* Corrected syntax */
+            background-image: url("pigs/backgr.webp"); /* Corrected syntax */
             background-repeat: no-repeat; /* Prevents repeated background */
             background-size: cover; /* Ensures the image covers the width */
             background-position: top; /* Aligns the image at the top */
