--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <h2>Sample Products</h2>
     <div class="product-grid">
       <!-- 8 Product Boxes -->
-      <div class="product-box"><img src="1.jpg" alt="Product 1"><p>Product 1</p></div>
-      <div class="product-box"><img src="2.jpg" alt="Product 2"><p>Product 2</p></div>
-      <div class="product-box"><img src="3.jpg" alt="Product 3"><p>Product 3</p></div>
-      <div class="product-box"><img src="4.jpg" alt="Product 4"><p>Product 4</p></div>
-      <div class="product-box"><img src="5.jpg" alt="Product 5"><p>Product 5</p></div>
-      <div class="product-box"><img src="6.jpg" alt="Product 6"><p>Product 6</p></div>
-      <div class="product-box"><img src="7.jpg" alt="Product 7"><p>Product 7</p></div>
-      <div class="product-box"><img src="8.jpg" alt="Product 8"><p>Product 8</p></div>
+      <div class="product-box"><img src="pigs/1.jpg" alt="Product 1"><p>Product 1</p></div>
+      <div class="product-box"><img src="pigs/2.jpg" alt="Product 2"><p>Product 2</p></div>
+      <div class="product-box"><img src="pigs/3.jpg" alt="Product 3"><p>Product 3</p></div>
+      <div class="product-box"><img src="pigs/4.jpg" alt="Product 4"><p>Product 4</p></div>
+      <div class="product-box"><img src="pigs/5.jpg" alt="Product 5"><p>Product 5</p></div>
+      <div class="product-box"><img src="pigs/6.jpg" alt="Product 6"><p>Product 6</p></div>
+      <div class="product-box"><img src="pigs/7.jpg" alt="Product 7"><p>Product 7</p></div>
+      <div class="product-box"><img src="pigs/8.jpg" alt="Product 8"><p>Product 8</p></div>
     </div>
   </section>
 
