--- a/index.html
+++ b/index.html
@@ -3,43 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EUVER SHOP</title>
+  <title>TALAMIA AI</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Hero Section -->
-  <header class="hero">
+  <header class="hero"> 
     <div class="hero-content">
-      <h1>Welcome to EUVER SHOP</h1>
-      <p>Get anything here</p>
-      <a href="#shop-now" class="buy-button">Buy Now</a>
+      <h1>Pick your Stunning Sidekicks</h1>
+      <h1> for Smarter Crypto Gains.</h1>
+      <p>Trade with Confidence, Guided by AI Elegance.</p>
+      <div class="button-container">
+	  <a href="https://dexscreener.com/" class="buy-button">Buy Now</a>
+      <div class="text-box">
+      CA: #######################################
+      </div>     </div> </div>
+	<div class="gif-container">
+    <img src="pigs/200.gif" alt="Background GIF" class="hero-gif">
+    </div>
+    <!-- Floating Circles Left -->
+    <div class="floating-circle left" style="--size: 14px; --position-x: 0.2; --position-y: 0.1; --animation-duration: 7s;"></div>
+    <div class="floating-circle left" style="--size: 14px; --position-x: 0.5; --position-y: 0.2; --animation-duration: 6s;"></div>
+    <div class="floating-circle left" style="--size: 14px; --po
+	sition-x: 0.7; --position-y: 0.3; --animation-duration: 8s;"></div>
+    
+    <!-- Floating Circles Right -->
+    <div class="floating-circle right" style="--size: 14px; --position-x: 0.1; --position-y: 0.4; --animation-duration: 5s;"></div>
+    <div class="floating-circle right" style="--size: 14px; --position-x: 0.6; --position-y: 0.5; --animation-duration: 9s;"></div>
+    <div class="floating-circle right" style="--size: 14px; --position-x: 0.9; --position-y: 0.6; --animation-duration: 10s;"></div>
+    <div class="logo">
+      <img src="pigs/tala.png" alt="Logo" class="logo-image">
     </div>
     <div class="social-buttons">
-      <a href="https://twitter.com" target="_blank" class="social twitter">T</a>
-      <a href="https://facebook.com" target="_blank" class="social facebook">F</a>
-      <a href="https://instagram.com" target="_blank" class="social instagram">I</a>
+      <a href="https://x.com/talamia_ai" target="_blank" class="social twitter">
+	  <img src="pigs/twit.webp" alt="twitter" /> 
+	  </a>
+      <a href="http://t.me/TALAMIA" target="_blank" class="social facebook">
+      <img src="pigs/tele.png" alt="Facebook" />
+      </a>
+      <a href="https://dexscreener.com/" target="_blank" class="social instagram">
+	  <img src="pigs/dexi.png" alt="instagram" />
+	  </a>
+	  <a href="https://pump.fun/" target="_blank" class="social pump">
+	  <img src="pigs/pump.png" alt="pump" />
+	  </a>
     </div>
   </header>
 
   <!-- Products Section -->
   <section class="products">
-    <h2>Sample Products</h2>
+    <h2>Available AI SIDEKICKS and TOOLS</h2>
     <div class="product-grid">
       <!-- 8 Product Boxes -->
-      <div class="product-box"><img src="pigs/1.jpg" alt="Product 1"><p>Product 1</p></div>
-      <div class="product-box"><img src="pigs/2.jpg" alt="Product 2"><p>Product 2</p></div>
-      <div class="product-box"><img src="pigs/3.jpg" alt="Product 3"><p>Product 3</p></div>
-      <div class="product-box"><img src="pigs/4.jpg" alt="Product 4"><p>Product 4</p></div>
-      <div class="product-box"><img src="pigs/5.jpg" alt="Product 5"><p>Product 5</p></div>
-      <div class="product-box"><img src="pigs/6.jpg" alt="Product 6"><p>Product 6</p></div>
-      <div class="product-box"><img src="pigs/7.jpg" alt="Product 7"><p>Product 7</p></div>
-      <div class="product-box"><img src="pigs/8.jpg" alt="Product 8"><p>Product 8</p></div>
+	  
+	  <div class="product-box">
+      <a href="product1.html" class="product1-box">
+	  <a href="product1.html"><img src="pigs/agents/1.jpeg" alt="Product 1"></a>
+      <p><a href="product1.html">Product 1</a></p>
+      </div>
+	  
+      <div class="product-box"><img src="pigs/agents/2.jpeg" alt="Product 2"><p>Product 2</p></div>
+      <div class="product-box"><img src="pigs/agents/3.jpeg" alt="Product 3"><p>Product 3</p></div>
+      <div class="product-box"><img src="pigs/agents/4.jpeg" alt="Product 4"><p>Product 4</p></div>
+      <div class="product-box"><img src="pigs/agents/5.jpeg" alt="Product 5"><p>Product 5</p></div>
+      <div class="product-box"><img src="pigs/agents/6.jpeg" alt="Product 6"><p>Product 6</p></div>
+	  <div class="product-box"><img src="pigs/agents/C.jpeg" alt="Product C"><p>Product C</p></div>
     </div>
   </section>
 
   <!-- Thank You Section -->
   <footer class="thank-you">
-    <h2>Thank You for Visiting EUVER SHOP!</h2>
+    <h2>Thank You for Visiting TALAMIA!</h2>
     <p>We appreciate your support and look forward to serving you again. Have a great day!</p>
   </footer>
 </body>
