--- a/index.html
+++ b/index.html
@@ -58,36 +58,36 @@
 	  
 	  <div class="product-box">
       <a href="second/product1.html" class="product1-box">
-	  <a href="second/product1.html"><img src="pigs/agents/1.jpeg" alt="Product 1"></a>
+	  <a href="second/product1.html"><img src="pigs/agents/w1.jpeg" alt="Product 1"></a>
       <p><a href="product1.html">Product 1</a></p>
       </div>
 	  
       <div class="product-box">
         <a href="second/product2.html" class="product2-box">
-          <a href="second/product2.html"><img src="pigs/agents/2.jpeg" alt="Product 2"></a>
+          <a href="second/product2.html"><img src="pigs/agents/w2.jpeg" alt="Product 2"></a>
             <p><a href="product2.html">Product 2</a></p>
       </div>
       <div class="product-box">
         <a href="second/product3.html" class="product3-box">
-          <a href="second/product3.html"><img src="pigs/agents/3.jpeg" alt="Product 3"></a>
+          <a href="second/product3.html"><img src="pigs/agents/w3.jpeg" alt="Product 3"></a>
             <p><a href="product3.html">Product 3</a></p>
       </div>
 
       <div class="product-box">
         <a href="second/product4.html" class="product4-box">
-          <a href="second/product4.html"><img src="pigs/agents/4.jpeg" alt="Product 4"></a>
+          <a href="second/product4.html"><img src="pigs/agents/w4.jpeg" alt="Product 4"></a>
             <p><a href="product4.html">Product 4</a></p>
       </div>
 
       <div class="product-box">
         <a href="second/product5.html" class="product5-box">
-          <a href="second/product5.html"><img src="pigs/agents/5.jpeg" alt="Product 5"></a>
+          <a href="second/product5.html"><img src="pigs/agents/w5.jpeg" alt="Product 5"></a>
             <p><a href="product5.html">Product 5</a></p>
       </div>
 
       <div class="product-box">
         <a href="second/product6.html" class="product6-box">
-          <a href="second/product6.html"><img src="pigs/agents/6.jpeg" alt="Product 6"></a>
+          <a href="second/product6.html"><img src="pigs/agents/w6.jpeg" alt="Product 6"></a>
             <p><a href="product6.html">Product 3</a></p>
       </div>
 	  <div class="product-box"><img src="pigs/agents/C.jpeg" alt="Product C"><p>Create your own</p></div>
