--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	  
 	  <div class="product-box">
       <a href="second/product1.html" class="product1-box">
-	  <a href="second/product1.html"><img src="pigs/agents/w1.jpeg" alt="Product 1"></a>
+	  <a href="second/product1.html"><img src="pigs/agents/1.jpeg" alt="Product 1"></a>
       <p><a href="product1.html">Product 1</a></p>
       </div>
 	  
