--- a/second/product1.html
+++ b/second/product1.html
@@ -23,7 +23,7 @@
       <div class="content">
         <div class="row">
           <div class="image-box">
-            <img src="../pigs/agents/1.jpeg" alt="Product1">
+            <img src="../pigs/agents/l.jpeg" alt="Product1">
             <p><img src="../pigs/agents/heart.webp" alt="heart-logo" class="heart-logo">12.2K Loves</p>
           </div>
           <div class="text-box">
