--- a/second/product6.html
+++ b/second/product6.html
@@ -23,7 +23,7 @@
       <div class="content">
         <div class="row">
           <div class="image-box">
-            <img src="../pigs/agents/6.jpeg" alt="Product1">
+            <img src="../pigs/agents/q.jpeg" alt="Product1">
             <p><img src="../pigs/agents/heart.webp" alt="heart-logo" class="heart-logo">14.9K Loves</p>
           </div>
           <div class="text-box">
