--- a/second/product2.html
+++ b/second/product2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Grid Design</title>
+  <title>TALAMIA AI / Adhara</title>
   <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div class="main-box">
       <div class="headers">
         <div class="header">
-          <h1>Risk Level Gauge</h1>
-          <p>>Hello I'm Valeria</p>
+          <h1>Adhara</h1>
+          <p>Risk Level Gauge</p>
         </div>
         <a href="../index.html" class="home-button">HOME</a>
       </div>
@@ -28,15 +28,16 @@
           </div>
           <div class="text-box">
             <div class="box box-1">
-              Concept: The Risk Level Gauge evaluates the risk associated with 
-              trading specific cryptocurrencies, particularly high-volatility assets
-               like memecoins. The AI analyzes community sentiment across platforms, trading volume, 
-              and historical performance to provide a risk assessment.
+              <p>Concept: The Risk Level Gauge evaluates the risk associated with trading 
+                specific cryptocurrencies, particularly high-volatility assets like memecoins. 
+                The AI analyzes community sentiment across platforms, 
+                trading volume, and historical performance to provide a risk assessment.</p>
+              <p>How It Helps: This tool helps traders avoid high-risk investments 
+                that may not be worth the potential losses, 
+                guiding them toward more stable and promising options.</p>
             </div>
             <div class="box box-2">
-              How It Helps: This tool helps traders avoid 
-              high-risk investments that may not be worth the potential losses, 
-              guiding them toward more stable and promising options.
+              Adhara is your Risk Level Gauge Master. Feel safe and secure as you know her.
             </div>
           </div>
         </div>
