--- a/second/product3.html
+++ b/second/product3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Grid Design</title>
+  <title>TALAMIA AI / Sienna</title>
   <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div class="main-box">
       <div class="headers">
         <div class="header">
-          <h1>Market Trend Analyzer</h1>
-          <p>>Hello I'm Kaeli</p>
+          <h1>Sienna</h1>
+          <p>AI-Powered Price Predictor</p>
         </div>
         <a href="../index.html" class="home-button">HOME</a>
       </div>
@@ -28,14 +28,16 @@
           </div>
           <div class="text-box">
             <div class="box box-1">
-              Concept: This tool uses AI to analyze current market trends, including the hype around specific projects, 
-              movements in Layer 1 solutions like Bitcoin (BTC), Solana (SOL), and Ethereum (ETH), and their impact on 
-              the broader market. It identifies potential high-earning cryptocurrencies for the coming days. How It Helps: 
-              By understanding market dynamics and predicting trends, traders can make informed decisions about which 
-              cryptocurrencies to invest in, reducing guesswork and increasing potential profitability.
+              <p>Concept: Using historical data, market sentiment, and real-time analytics, 
+                this AI-driven tool predicts
+                 short-term and long-term price movements for various cryptocurrencies.</p>
+              <p>How It Helps: By offering price targets and potential
+                 trajectories, traders can set more accurate entry and exit points,
+                 optimizing their trades for maximum profit.</p>
             </div>
             <div class="box box-2">
-              Note: Please explore the features to know more.
+              Sienna is your AI-Powered Price Predictor. 
+              See the future together with proper metrics to look at.
             </div>
           </div>
         </div>
@@ -43,7 +45,7 @@
         <div class="row2">
           <div class="box chatbot">
             <div class="chat-window">
-              <div class="bot-message message">Hello I'm Kaeli, How can I help you?</div>
+              <div class="bot-message message">Hello I'm Sienna, How can I help you?</div>
             </div>
           </div>
           <div class="chat-input">
