--- a/second/product5.html
+++ b/second/product5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Grid Design</title>
+  <title>TALAMIA AI / Ellie</title>
   <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div class="main-box">
       <div class="headers">
         <div class="header">
-          <h1>Market Trend Analyzer</h1>
-          <p>>Hello I'm Kaeli</p>
+          <h1>Ellie</h1>
+          <p>Portfolio Optimizer</p>
         </div>
         <a href="../index.html" class="home-button">HOME</a>
       </div>
@@ -28,14 +28,17 @@
           </div>
           <div class="text-box">
             <div class="box box-1">
-              Concept: This tool uses AI to analyze current market trends, including the hype around specific projects, 
-              movements in Layer 1 solutions like Bitcoin (BTC), Solana (SOL), and Ethereum (ETH), and their impact on 
-              the broader market. It identifies potential high-earning cryptocurrencies for the coming days. How It Helps: 
-              By understanding market dynamics and predicting trends, traders can make informed decisions about which 
-              cryptocurrencies to invest in, reducing guesswork and increasing potential profitability.
+              <p>Concept: The Portfolio Optimizer uses AI to analyze a trader's 
+                current holdings and suggests adjustments to balance risk and reward.
+                 It considers market trends, asset performance, and diversification strategies.</p>
+              <p>How It Helps: By continuously optimizing the portfolio, 
+                traders can reduce exposure to underperforming assets and
+                 increase their overall returns,
+                 aligning their portfolio with market conditions.</p>
             </div>
             <div class="box box-2">
-              Note: Please explore the features to know more.
+              Ellie is your Portfolio Optimizer. 
+              Tap those keys and let’s create something awesome together!
             </div>
           </div>
         </div>
@@ -43,7 +46,7 @@
         <div class="row2">
           <div class="box chatbot">
             <div class="chat-window">
-              <div class="bot-message message">Hello I'm Kaeli, How can I help you?</div>
+              <div class="bot-message message">Hello I'm Adeline, How can I help you?</div>
             </div>
           </div>
           <div class="chat-input">
