--- a/second/product1.html
+++ b/second/product1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Grid Design</title>
+  <title>TALAMIA AI / Kaeli</title>
   <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div class="main-box">
       <div class="headers">
         <div class="header">
-          <h1>Market Trend Analyzer</h1>
-          <p>>Hello I'm Kaeli</p>
+          <h1>KAELI</h1>
+          <p>Market Trend Analyzer</p>
         </div>
         <a href="../index.html" class="home-button">HOME</a>
       </div>
@@ -24,18 +24,19 @@
         <div class="row">
           <div class="image-box">
             <img src="../pigs/agents/l.jpeg" alt="Product1">
-            <p><img src="../pigs/agents/heart.webp" alt="heart-logo" class="heart-logo">12.2K Loves</p>
+            <p><img src="../pigs/agents/heart.webp" alt="heart-logo" class="heart-logo">12.2K Hearts</p>
           </div>
           <div class="text-box">
             <div class="box box-1">
-              Concept: This tool uses AI to analyze current market trends, including the hype around specific projects, 
-              movements in Layer 1 solutions like Bitcoin (BTC), Solana (SOL), and Ethereum (ETH), and their impact on 
-              the broader market. It identifies potential high-earning cryptocurrencies for the coming days. How It Helps: 
+              <p>Concept: This tool uses AI to analyze current market trends, including the hype around specific projects, 
+                movements in Layer 1 solutions like Bitcoin (BTC), Solana (SOL), and Ethereum (ETH), and their impact on 
+                the broader market. It identifies potential high-earning cryptocurrencies for the coming days. </p>
+                <p> How It Helps: 
               By understanding market dynamics and predicting trends, traders can make informed decisions about which 
-              cryptocurrencies to invest in, reducing guesswork and increasing potential profitability.
+              cryptocurrencies to invest in, reducing guesswork and increasing potential profitability.</p>
             </div>
             <div class="box box-2">
-              Note: Please explore the features to know more.
+              Kaeli is your Market Trend Analyzer. Feel free to ask anything for your trading improvement.
             </div>
           </div>
         </div>
