--- a/second/product4.html
+++ b/second/product4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Grid Design</title>
+  <title>TALAMIA AI / Aaliyah</title>
   <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div class="main-box">
       <div class="headers">
         <div class="header">
-          <h1>Market Trend Analyzer</h1>
-          <p>>Hello I'm Kaeli</p>
+          <h1>Aaliyah</h1>
+          <p>Sentiment and News Scanner</p>
         </div>
         <a href="../index.html" class="home-button">HOME</a>
       </div>
@@ -28,14 +28,17 @@
           </div>
           <div class="text-box">
             <div class="box box-1">
-              Concept: This tool uses AI to analyze current market trends, including the hype around specific projects, 
-              movements in Layer 1 solutions like Bitcoin (BTC), Solana (SOL), and Ethereum (ETH), and their impact on 
-              the broader market. It identifies potential high-earning cryptocurrencies for the coming days. How It Helps: 
-              By understanding market dynamics and predicting trends, traders can make informed decisions about which 
-              cryptocurrencies to invest in, reducing guesswork and increasing potential profitability.
+              <p>Concept: This tool scans social media, news outlets, and forums to 
+                gauge the sentiment around specific cryptocurrencies. 
+                It identifies trending topics and emerging news that 
+                could influence market movements.</p>
+              <p>How It Helps: Keeping traders updated on the latest developments 
+                and public sentiment allows them to react quickly to news that 
+                could affect their investments.</p>
             </div>
             <div class="box box-2">
-              Note: Please explore the features to know more.
+              Aaliyah is your Sentiment and News Scanner. 
+              Ready to explore ideas, ask questions, or just vibe? I’m all ears!
             </div>
           </div>
         </div>
@@ -43,7 +46,7 @@
         <div class="row2">
           <div class="box chatbot">
             <div class="chat-window">
-              <div class="bot-message message">Hello I'm Kaeli, How can I help you?</div>
+              <div class="bot-message message">Hello I'm Aaliyah, How can I help you?</div>
             </div>
           </div>
           <div class="chat-input">
