--- a/second/product6.html
+++ b/second/product6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Grid Design</title>
+  <title>TALAMIA AI / Adhara</title>
   <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div class="main-box">
       <div class="headers">
         <div class="header">
-          <h1>Market Trend Analyzer</h1>
-          <p>>Hello I'm Kaeli</p>
+          <h1>Adhara</h1>
+          <p>Volume and Liquidity Tracker</p>
         </div>
         <a href="../index.html" class="home-button">HOME</a>
       </div>
@@ -28,14 +28,18 @@
           </div>
           <div class="text-box">
             <div class="box box-1">
-              Concept: This tool uses AI to analyze current market trends, including the hype around specific projects, 
-              movements in Layer 1 solutions like Bitcoin (BTC), Solana (SOL), and Ethereum (ETH), and their impact on 
-              the broader market. It identifies potential high-earning cryptocurrencies for the coming days. How It Helps: 
-              By understanding market dynamics and predicting trends, traders can make informed decisions about which 
-              cryptocurrencies to invest in, reducing guesswork and increasing potential profitability.
+              <p>Concept: This tool monitors the trading volume and liquidity 
+                of cryptocurrencies in real-time.
+                 It highlights assets with significant market activity that 
+                 could indicate potential price movements.</p>
+              <p>How It Helps: High volume and liquidity often precede 
+                substantial price changes. By tracking these metrics, 
+                traders can identify opportunities for profitable 
+                trades before they become widely apparent.</p>
             </div>
             <div class="box box-2">
-              Note: Please explore the features to know more.
+              Adhara is your Volume and Liquidity Tracker. 
+              Curiosity calling? Let’s chat and make it an adventure!
             </div>
           </div>
         </div>
@@ -43,7 +47,7 @@
         <div class="row2">
           <div class="box chatbot">
             <div class="chat-window">
-              <div class="bot-message message">Hello I'm Kaeli, How can I help you?</div>
+              <div class="bot-message message">Hello I'm Adhara, How can I help you?</div>
             </div>
           </div>
           <div class="chat-input">
