--- a/index.html
+++ b/index.html
@@ -57,40 +57,40 @@
       <!-- 8 Product Boxes -->
 	  
 	  <div class="product-box">
-      <a href="second/product1.html" class="product1-box">
-	  <a href="second/product1.html"><img src="pigs/agents/l.jpeg" alt="Product 1"></a>
-      <p><a href="product1.html">Product 1</a></p>
+      <a href="second/kaeli.html" class="product1-box">
+	  <a href="second/kaeli.html"><img src="pigs/agents/l.jpeg" alt="Product 1"></a>
+      <p><a href="second/kaeli.html" alt="name" class="name">Kaeli</a></p>
       </div>
 	  
       <div class="product-box">
-        <a href="second/product2.html" class="product2-box">
-          <a href="second/product2.html"><img src="pigs/agents/m.jpeg" alt="Product 2"></a>
-            <p><a href="product2.html">Product 2</a></p>
+        <a href="second/Adhara.html" class="product2-box">
+          <a href="second/Adhara.html"><img src="pigs/agents/m.jpeg" alt="Product 2"></a>
+            <p><a href="second/Adhara.html" alt="name" class="name">Adhara</a></p>
       </div>
       <div class="product-box">
-        <a href="second/product3.html" class="product3-box">
-          <a href="second/product3.html"><img src="pigs/agents/n.jpeg" alt="Product 3"></a>
-            <p><a href="product3.html">Product 3</a></p>
+        <a href="second/Sienna.html" class="product3-box">
+          <a href="second/Sienna.html"><img src="pigs/agents/n.jpeg" alt="Product 3"></a>
+            <p><a href="second/Sienna.html" alt="name" class="name">Sienna</a></p>
       </div>
 
       <div class="product-box">
-        <a href="second/product4.html" class="product4-box">
-          <a href="second/product4.html"><img src="pigs/agents/o.jpeg" alt="Product 4"></a>
-            <p><a href="product4.html">Product 4</a></p>
+        <a href="second/Aaliyah.html" class="product4-box">
+          <a href="second/Aaliyah.html"><img src="pigs/agents/o.jpeg" alt="Product 4"></a>
+            <p><a href="second/Aaliyah.html" alt="name" class="name">Aaliyah</a></p>
       </div>
 
       <div class="product-box">
-        <a href="second/product5.html" class="product5-box">
-          <a href="second/product5.html"><img src="pigs/agents/p.jpeg" alt="Product 5"></a>
-            <p><a href="product5.html">Product 5</a></p>
+        <a href="second/Ellie.html" class="product5-box">
+          <a href="second/Ellie.html"><img src="pigs/agents/p.jpeg" alt="Product 5"></a>
+            <p><a href="second/Ellie.html" alt="name" class="name">Ellie</a></p>
       </div>
 
       <div class="product-box">
-        <a href="second/product6.html" class="product6-box">
-          <a href="second/product6.html"><img src="pigs/agents/q.jpeg" alt="Product 6"></a>
-            <p><a href="product6.html">Product 3</a></p>
+        <a href="second/Skye.html" class="product6-box">
+          <a href="second/Skye.html"><img src="pigs/agents/q.jpeg" alt="Product 6"></a>
+            <p><a href="second/Skye.html" alt="name" class="name">Skye</a></p>
       </div>
-	  <div class="product-box"><img src="pigs/agents/C.jpeg" alt="Product C"><p>Create your own</p></div>
+	  <div class="product-box"><img src="pigs/agents/C.jpeg" alt="Product C"><p alt="name" class="name">Create your own</p></div>
     </div>
   </section>
 
