--- a/index.html
+++ b/index.html
@@ -57,32 +57,32 @@
       <!-- 8 Product Boxes -->
 	  
 	  <div class="product-box">
-      <a href="second/kaeli.html" class="product1-box">
-	  <a href="second/kaeli.html"><img src="pigs/agents/l.jpeg" alt="Product 1"></a>
-      <p><a href="second/kaeli.html" alt="name" class="name">Kaeli</a></p>
+      <a href="second/kaeli" class="product1-box">
+	  <a href="second/kaeli"><img src="pigs/agents/l.jpeg" alt="Product 1"></a>
+      <p><a href="second/kaeli" alt="name" class="name">Kaeli</a></p>
       </div>
 	  
       <div class="product-box">
-        <a href="second/Adhara.html" class="product2-box">
-          <a href="second/Adhara.html"><img src="pigs/agents/m.jpeg" alt="Product 2"></a>
-            <p><a href="second/Adhara.html" alt="name" class="name">Adhara</a></p>
+        <a href="second/Adhara" class="product2-box">
+          <a href="second/Adhara"><img src="pigs/agents/m.jpeg" alt="Product 2"></a>
+            <p><a href="second/Adhara" alt="name" class="name">Adhara</a></p>
       </div>
       <div class="product-box">
-        <a href="second/Sienna.html" class="product3-box">
-          <a href="second/Sienna.html"><img src="pigs/agents/n.jpeg" alt="Product 3"></a>
-            <p><a href="second/Sienna.html" alt="name" class="name">Sienna</a></p>
-      </div>
-
-      <div class="product-box">
-        <a href="second/Aaliyah.html" class="product4-box">
-          <a href="second/Aaliyah.html"><img src="pigs/agents/o.jpeg" alt="Product 4"></a>
-            <p><a href="second/Aaliyah.html" alt="name" class="name">Aaliyah</a></p>
+        <a href="second/Sienna" class="product3-box">
+          <a href="second/Sienna"><img src="pigs/agents/n.jpeg" alt="Product 3"></a>
+            <p><a href="second/Sienna" alt="name" class="name">Sienna</a></p>
       </div>
 
       <div class="product-box">
-        <a href="second/Ellie.html" class="product5-box">
-          <a href="second/Ellie.html"><img src="pigs/agents/p.jpeg" alt="Product 5"></a>
-            <p><a href="second/Ellie.html" alt="name" class="name">Ellie</a></p>
+        <a href="second/Aaliyah" class="product4-box">
+          <a href="second/Aaliyah"><img src="pigs/agents/o.jpeg" alt="Product 4"></a>
+            <p><a href="second/Aaliyah" alt="name" class="name">Aaliyah</a></p>
+      </div>
+
+      <div class="product-box">
+        <a href="second/Ellie" class="product5-box">
+          <a href="second/Ellie"><img src="pigs/agents/p.jpeg" alt="Product 5"></a>
+            <p><a href="second/Ellie" alt="name" class="name">Ellie</a></p>
       </div>
 
       <div class="product-box">
