--- a/index.html
+++ b/index.html
@@ -57,38 +57,38 @@
       <!-- 8 Product Boxes -->
 	  
 	  <div class="product-box">
-      <a href="second/kaeli" class="product1-box">
-	  <a href="second/kaeli"><img src="pigs/agents/l.jpeg" alt="Product 1"></a>
-      <p><a href="second/kaeli" alt="name" class="name">Kaeli</a></p>
+      <a href="agent/Kaeli" class="product1-box">
+	  <a href="agent/Kaeli"><img src="pigs/agents/l.jpeg" alt="Product 1"></a>
+      <p><a href="agent/Kaeli" alt="name" class="name">Kaeli</a></p>
       </div>
 	  
       <div class="product-box">
-        <a href="second/Adhara" class="product2-box">
-          <a href="second/Adhara"><img src="pigs/agents/m.jpeg" alt="Product 2"></a>
-            <p><a href="second/Adhara" alt="name" class="name">Adhara</a></p>
+        <a href="agent/Adhara" class="product2-box">
+          <a href="agent/Adhara"><img src="pigs/agents/m.jpeg" alt="Product 2"></a>
+            <p><a href="agent/Adhara" alt="name" class="name">Adhara</a></p>
       </div>
       <div class="product-box">
-        <a href="second/Sienna" class="product3-box">
-          <a href="second/Sienna"><img src="pigs/agents/n.jpeg" alt="Product 3"></a>
-            <p><a href="second/Sienna" alt="name" class="name">Sienna</a></p>
-      </div>
-
-      <div class="product-box">
-        <a href="second/Aaliyah" class="product4-box">
-          <a href="second/Aaliyah"><img src="pigs/agents/o.jpeg" alt="Product 4"></a>
-            <p><a href="second/Aaliyah" alt="name" class="name">Aaliyah</a></p>
+        <a href="agent/Sienna" class="product3-box">
+          <a href="agent/Sienna"><img src="pigs/agents/n.jpeg" alt="Product 3"></a>
+            <p><a href="agent/Sienna" alt="name" class="name">Sienna</a></p>
       </div>
 
       <div class="product-box">
-        <a href="second/Ellie" class="product5-box">
-          <a href="second/Ellie"><img src="pigs/agents/p.jpeg" alt="Product 5"></a>
-            <p><a href="second/Ellie" alt="name" class="name">Ellie</a></p>
+        <a href="agent/Aaliyah" class="product4-box">
+          <a href="agent/Aaliyah"><img src="pigs/agents/o.jpeg" alt="Product 4"></a>
+            <p><a href="agent/Aaliyah" alt="name" class="name">Aaliyah</a></p>
       </div>
 
       <div class="product-box">
-        <a href="second/Skye.html" class="product6-box">
-          <a href="second/Skye.html"><img src="pigs/agents/q.jpeg" alt="Product 6"></a>
-            <p><a href="second/Skye.html" alt="name" class="name">Skye</a></p>
+        <a href="agent/Ellie" class="product5-box">
+          <a href="agent/Ellie"><img src="pigs/agents/p.jpeg" alt="Product 5"></a>
+            <p><a href="agent/Ellie" alt="name" class="name">Ellie</a></p>
+      </div>
+
+      <div class="product-box">
+        <a href="agent/Skye.html" class="product6-box">
+          <a href="agent/Skye.html"><img src="pigs/agents/q.jpeg" alt="Product 6"></a>
+            <p><a href="agent/Skye.html" alt="name" class="name">Skye</a></p>
       </div>
 	  <div class="product-box"><img src="pigs/agents/C.jpeg" alt="Product C"><p alt="name" class="name">Create your own</p></div>
     </div>
