--- a/agent/Aaliyah.html
+++ b/agent/Aaliyah.html
@@ -17,7 +17,7 @@
           <h1>Aaliyah</h1>
           <p>Sentiment and News Scanner</p>
         </div>
-        <a href="../index.html" class="home-button">HOME</a>
+        <a href="../" class="home-button">HOME</a>
       </div>
 
       <div class="content">
