--- a/agent/Adhara.html
+++ b/agent/Adhara.html
@@ -17,7 +17,7 @@
           <h1>Adhara</h1>
           <p>Risk Level Gauge</p>
         </div>
-        <a href="../index.html" class="home-button">HOME</a>
+        <a href="../" class="home-button">HOME</a>
       </div>
 
       <div class="content">
