--- a/agent/Ellie.html
+++ b/agent/Ellie.html
@@ -17,7 +17,7 @@
           <h1>Ellie</h1>
           <p>Portfolio Optimizer</p>
         </div>
-        <a href="../index.html" class="home-button">HOME</a>
+        <a href="../" class="home-button">HOME</a>
       </div>
 
       <div class="content">
