--- a/agent/Sienna.html
+++ b/agent/Sienna.html
@@ -17,7 +17,7 @@
           <h1>Sienna</h1>
           <p>AI-Powered Price Predictor</p>
         </div>
-        <a href="../index.html" class="home-button">HOME</a>
+        <a href="../" class="home-button">HOME</a>
       </div>
 
       <div class="content">
