--- a/agent/Ellie.html
+++ b/agent/Ellie.html
@@ -46,7 +46,7 @@
         <div class="row2">
           <div class="box chatbot">
             <div class="chat-window">
-              <div class="bot-message message">Hello I'm Adeline, How can I help you?</div>
+              <div class="bot-message message">Hello I'm Ellie, How can I help you?</div>
             </div>
           </div>
           <div class="chat-input">
