--- a/agent/Skye.html
+++ b/agent/Skye.html
@@ -38,7 +38,7 @@
                 trades before they become widely apparent.</p>
             </div>
             <div class="box box-2">
-              Adhara is your Volume and Liquidity Tracker. 
+              Skye is your Volume and Liquidity Tracker. 
               Curiosity calling? Let’s chat and make it an adventure!
             </div>
           </div>
