--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="hero-content">
       <h1>Pick your Stunning Sidekicks</h1>
-      <h1> for Smarter Crypto Gains.</h1>
+      <h1> for Smarter Crypto Gains</h1>
       <p>Trade with Confidence, Guided by AI Elegance.</p>
       <div class="button-container">
 	    <a href="https://dexscreener.com/" class="buy-button">Buy Now</a>
