--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1> for Smarter Crypto Gains</h1>
       <p>Trade with Confidence, Guided by AI Elegance.</p>
       <div class="button-container">
-	    <a href="https://dexscreener.com/" class="buy-button">Buy Now</a>
+	   <a href="PROJECTS_DC101/frontsecret" class="buy-button">Buy Now</a>
       <div class="text-box">
       CA: #######################################
       </div>     </div> 
